--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -19,33 +19,12 @@
 body, p, span, div {
   color: $body-copy;
 }
-
-.section-title {
-  @include font-large(bold);
-  color: $header-copy;
-  & > span {
-    font-style: italic;
-    color: $header-copy;
-  }
-}
-.nav-item {
-  height: 33px;
-  float: left;
-  &.nav-item-left {
-    width: 152px;
-  }
-  &.nav-item-right {
-    width: 18px;
-  }
-}
-
 li {
   float: left;
 }
 
 .container-wrapper {
   background-color: #000;
-  min-width: 1000;
   height: 100%;
   min-height: 800px;
   @include image-background('../images/background.jpg');
@@ -64,9 +43,42 @@ li {
   position: absolute;
   z-index: 0;
 }
+
 .container {
   padding-top: 163px;
   position: relative;
+}
+
+.section-title {
+  @include font-large(bold);
+  color: $header-copy;
+  & > span {
+    font-style: italic;
+    color: $header-copy;
+  }
+}
+
+.nav-item {
+  height: 33px;
+  float: left;
+  &.nav-item-right {
+    width: 18px;
+  }
+}
+
+.navigation {
+  & > .span11 {
+    margin-left: 30px;
+  }
+}
+.nav-listitems {
+  width: 100%;
+}
+.nav-listitem {
+  max-width: 33%;
+  &:first-child {
+    padding-left: 10px;
+  }
 }
 
 .textured {
@@ -81,16 +93,6 @@ li {
   height: 12px;
   @include border-top-left-radius(10px);
   @include border-top-right-radius(10px);
-}
-
-.navigation {
-  & > .span11 {
-    margin-left: 30px;
-  }
-}
-
-.nav-listitem {
-  max-width: 33%;
 }
 
 .footer-container {
@@ -196,6 +198,7 @@ footer {
   height: 220px;
   overflow: auto;
   width: 100%;
+  cursor: pointer;
   & > .repo-listitem {
     border-bottom: 1px solid rgba(gray, 0.5);
     color: gray;
@@ -221,6 +224,19 @@ footer {
   display: none !important;
 }
 /* bootstrap overrides */
+
+@media (max-width: 767px)
+{
+  body {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+  }
+  
+  .container-wrapper {
+    padding: 0 20px;
+  }
+}
+
 form {
   & > .control-group {
     margin-top: 18px;
@@ -270,6 +286,8 @@ input {
   
   &.nav-btn {
     border-color: #b3a5a2;
+    width: auto;
+    margin-left: 18px;
   }
   &.form-btn {
     margin-top: 0px;
