--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -73,22 +73,22 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   background: url('/ea/assets/images/sprites/general-s11a649fb0c.png') no-repeat;
 }
 
-/* line 60, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+/* line 60, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .general-nav-left {
   background-position: 0 0;
 }
 
-/* line 60, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+/* line 60, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .general-nav-right {
   background-position: 0 -99px;
 }
 
-/* line 60, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+/* line 60, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .general-page-bottom-corner {
   background-position: 0 -198px;
 }
 
-/* line 60, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+/* line 60, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .general-page-gutter-top {
   background-position: 0 -222px;
 }
@@ -98,40 +98,14 @@ body, p, span, div {
   color: #8e8e8e;
 }
 
-/* line 23, ../sass/screen.scss */
-.section-title {
-  font: normal bold 14px Helvetica, Arial, "sans-serif";
-  color: #f2d476;
-}
-/* line 26, ../sass/screen.scss */
-.section-title > span {
-  font-style: italic;
-  color: #f2d476;
-}
-
-/* line 31, ../sass/screen.scss */
-.nav-item {
-  height: 33px;
-  float: left;
-}
-/* line 34, ../sass/screen.scss */
-.nav-item.nav-item-left {
-  width: 152px;
-}
-/* line 37, ../sass/screen.scss */
-.nav-item.nav-item-right {
-  width: 18px;
-}
-
-/* line 42, ../sass/screen.scss */
+/* line 22, ../sass/screen.scss */
 li {
   float: left;
 }
 
-/* line 46, ../sass/screen.scss */
+/* line 26, ../sass/screen.scss */
 .container-wrapper {
   background-color: #000;
-  min-width: 1000;
   height: 100%;
   min-height: 800px;
   background-image: url("../images/background.jpg");
@@ -139,12 +113,12 @@ li {
   background-position: top center;
 }
 
-/* line 54, ../sass/screen.scss */
+/* line 33, ../sass/screen.scss */
 .content-wrapper {
   overflow: hidden;
 }
 
-/* line 58, ../sass/screen.scss */
+/* line 37, ../sass/screen.scss */
 .logo {
   min-width: 800px;
   min-height: 600px;
@@ -157,13 +131,53 @@ li {
   z-index: 0;
 }
 
-/* line 67, ../sass/screen.scss */
+/* line 47, ../sass/screen.scss */
 .container {
   padding-top: 163px;
   position: relative;
 }
 
-/* line 72, ../sass/screen.scss */
+/* line 52, ../sass/screen.scss */
+.section-title {
+  font: normal bold 14px Helvetica, Arial, "sans-serif";
+  color: #f2d476;
+}
+/* line 55, ../sass/screen.scss */
+.section-title > span {
+  font-style: italic;
+  color: #f2d476;
+}
+
+/* line 61, ../sass/screen.scss */
+.nav-item {
+  height: 33px;
+  float: left;
+}
+/* line 64, ../sass/screen.scss */
+.nav-item.nav-item-right {
+  width: 18px;
+}
+
+/* line 70, ../sass/screen.scss */
+.navigation > .span11 {
+  margin-left: 30px;
+}
+
+/* line 74, ../sass/screen.scss */
+.nav-listitems {
+  width: 100%;
+}
+
+/* line 77, ../sass/screen.scss */
+.nav-listitem {
+  max-width: 33%;
+}
+/* line 79, ../sass/screen.scss */
+.nav-listitem:first-child {
+  padding-left: 10px;
+}
+
+/* line 84, ../sass/screen.scss */
 .textured {
   background-image: url("../images/content-texture.jpg");
   background-repeat: repeat-x;
@@ -172,7 +186,7 @@ li {
   height: 365px;
 }
 
-/* line 78, ../sass/screen.scss */
+/* line 90, ../sass/screen.scss */
 .header-texture {
   background-image: url("../images/header-texture.jpg");
   background-repeat: repeat-x;
@@ -187,43 +201,33 @@ li {
   border-top-right-radius: 10px;
 }
 
-/* line 87, ../sass/screen.scss */
-.navigation > .span11 {
-  margin-left: 30px;
-}
-
-/* line 92, ../sass/screen.scss */
-.nav-listitem {
-  max-width: 33%;
-}
-
-/* line 96, ../sass/screen.scss */
+/* line 98, ../sass/screen.scss */
 .footer-container {
   padding-top: 0px;
 }
 
-/* line 100, ../sass/screen.scss */
+/* line 102, ../sass/screen.scss */
 .gutter > .gutter-top_corner {
   width: 9px;
   height: 36px;
 }
-/* line 105, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
 .gutter.gutter-left {
   float: left;
   margin-left: -20px;
 }
-/* line 109, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 .gutter.gutter-left > .gutter-top_corner, .gutter.gutter-left > .gutter-repeat {
   margin-left: 11px;
 }
-/* line 114, ../sass/screen.scss */
+/* line 116, ../sass/screen.scss */
 .gutter.gutter-right {
   float: right;
   /* hate the way I've done this */
   margin-right: -9px;
   margin-top: -365px;
 }
-/* line 119, ../sass/screen.scss */
+/* line 121, ../sass/screen.scss */
 .gutter.gutter-right > .gutter-top_corner, .gutter.gutter-right > .gutter-repeat {
   -webkit-transform: scale(-1, 1);
   -moz-transform: scale(-1, 1);
@@ -231,14 +235,14 @@ li {
   -o-transform: scale(-1, 1);
   transform: scale(-1, 1);
 }
-/* line 124, ../sass/screen.scss */
+/* line 126, ../sass/screen.scss */
 .gutter > .gutter-repeat {
   height: 329px;
   background-image: url("../images/gutter-repeat.png");
   background-repeat: repeat;
   background-position: top left;
 }
-/* line 129, ../sass/screen.scss */
+/* line 131, ../sass/screen.scss */
 .gutter.gutter-base {
   background-size: 100%;
   height: 8px;
@@ -250,7 +254,7 @@ li {
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.8);
   border-bottom: 2px solid #000;
 }
-/* line 138, ../sass/screen.scss */
+/* line 140, ../sass/screen.scss */
 .gutter.gutter-base > .gutter-base-detail {
   background-image: url("../images/header-texture.jpg");
   background-repeat: repeat;
@@ -259,14 +263,14 @@ li {
   height: 100%;
   position: relative;
 }
-/* line 145, ../sass/screen.scss */
+/* line 147, ../sass/screen.scss */
 .gutter.gutter-base > .gutter-base-detail > .gutter-shadow_internal {
   position: absolute;
   height: 100%;
   width: 40px;
   z-index: 1;
 }
-/* line 151, ../sass/screen.scss */
+/* line 153, ../sass/screen.scss */
 .gutter.gutter-base > .gutter-base-detail > .gutter-shadow_internal.shadow-left {
   background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, #000000), color-stop(100%, rgba(0, 0, 0, 0)));
   background-image: -webkit-linear-gradient(left, #000000, rgba(0, 0, 0, 0));
@@ -275,7 +279,7 @@ li {
   background-image: linear-gradient(left, #000000, rgba(0, 0, 0, 0));
   left: 0px;
 }
-/* line 155, ../sass/screen.scss */
+/* line 157, ../sass/screen.scss */
 .gutter.gutter-base > .gutter-base-detail > .gutter-shadow_internal.shadow-right {
   background-image: -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, #000000), color-stop(100%, rgba(0, 0, 0, 0)));
   background-image: -webkit-linear-gradient(right, #000000, rgba(0, 0, 0, 0));
@@ -284,7 +288,7 @@ li {
   background-image: linear-gradient(right, #000000, rgba(0, 0, 0, 0));
   right: 0px;
 }
-/* line 162, ../sass/screen.scss */
+/* line 164, ../sass/screen.scss */
 .gutter.gutter-base > .gutter-base-detail > hr {
   margin: 0px;
   position: absolute;
@@ -297,37 +301,38 @@ li {
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
 
-/* line 179, ../sass/screen.scss */
+/* line 181, ../sass/screen.scss */
 footer {
   overflow-y: hidden;
 }
 
-/* line 183, ../sass/screen.scss */
+/* line 185, ../sass/screen.scss */
 .drop-shadow {
   -webkit-box-shadow: 0 20px 60px 30px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0 20px 60px 30px rgba(0, 0, 0, 0.8);
   box-shadow: 0 20px 60px 30px rgba(0, 0, 0, 0.8);
 }
 
-/* line 187, ../sass/screen.scss */
+/* line 189, ../sass/screen.scss */
 .drop-shadow-multiple {
   -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0 0 35px 25px, rgba(255, 255, 255, 0.75) 7px 0 7px -6px inset;
   -moz-box-shadow: rgba(0, 0, 0, 0.4) 0 0 35px 25px, rgba(255, 255, 255, 0.75) 7px 0 7px -6px inset;
   box-shadow: rgba(0, 0, 0, 0.4) 0 0 35px 25px, rgba(255, 255, 255, 0.75) 7px 0 7px -6px inset;
 }
 
-/* line 191, ../sass/screen.scss */
+/* line 193, ../sass/screen.scss */
 .tab-content {
   position: relative;
 }
 
-/* line 195, ../sass/screen.scss */
+/* line 197, ../sass/screen.scss */
 .repo-listitems {
   height: 220px;
   overflow: auto;
   width: 100%;
+  cursor: pointer;
 }
-/* line 199, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 .repo-listitems > .repo-listitem {
   border-bottom: 1px solid rgba(128, 128, 128, 0.5);
   color: gray;
@@ -337,44 +342,56 @@ footer {
   min-height: 28px;
   line-height: 28px;
 }
-/* line 207, ../sass/screen.scss */
+/* line 210, ../sass/screen.scss */
 .repo-listitems > .repo-listitem > .repo-listitem_left {
   float: left;
   width: 75%;
 }
-/* line 211, ../sass/screen.scss */
+/* line 214, ../sass/screen.scss */
 .repo-listitems > .repo-listitem > .repo-listitem_right {
   float: right;
   width: 25%;
   text-align: right;
 }
 
-/* line 220, ../sass/screen.scss */
+/* line 223, ../sass/screen.scss */
 [ng\:cloak], [ng-cloak], .ng-cloak {
   display: none !important;
 }
 
 /* bootstrap overrides */
-/* line 225, ../sass/screen.scss */
+@media (max-width: 767px) {
+  /* line 230, ../sass/screen.scss */
+  body {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+  }
+
+  /* line 235, ../sass/screen.scss */
+  .container-wrapper {
+    padding: 0 20px;
+  }
+}
+/* line 241, ../sass/screen.scss */
 form > .control-group {
   margin-top: 18px;
   margin-bottom: 12px;
 }
-/* line 230, ../sass/screen.scss */
+/* line 246, ../sass/screen.scss */
 form > .control-group ~ .control-group {
   margin-top: 0px;
 }
-/* line 234, ../sass/screen.scss */
+/* line 250, ../sass/screen.scss */
 form > .control-group.btn-group {
   width: 78%;
   margin-left: 20%;
 }
 
-/* line 241, ../sass/screen.scss */
+/* line 257, ../sass/screen.scss */
 input {
   border-color: #494949;
 }
-/* line 244, ../sass/screen.scss */
+/* line 260, ../sass/screen.scss */
 input.input-xlarge-override.input-xlarge {
   font: normal normal 12px Helvetica, Arial, "sans-serif";
   -webkit-border-radius: 1px;
@@ -386,13 +403,13 @@ input.input-xlarge-override.input-xlarge {
   margin-bottom: 0px;
 }
 
-/* line 252, ../sass/screen.scss */
+/* line 268, ../sass/screen.scss */
 .btn-small {
   margin-left: 12%;
   margin-top: 2%;
   width: 73%;
 }
-/* line 258, ../sass/screen.scss */
+/* line 274, ../sass/screen.scss */
 .btn-small.nav-btn, .btn-small.form-btn {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(75%, #d4b765), color-stop(87.5%, rgba(135, 49, 22, 0.5)), color-stop(100%, #d4b765));
   background-image: -webkit-linear-gradient(top, #d4b765 75%, rgba(135, 49, 22, 0.5), #d4b765);
@@ -407,16 +424,18 @@ input.input-xlarge-override.input-xlarge {
   line-height: 23px;
   color: #873116;
 }
-/* line 265, ../sass/screen.scss */
+/* line 281, ../sass/screen.scss */
 .btn-small.nav-btn:hover, .btn-small.form-btn:hover {
   opacity: 0.75;
   background-position: 0 0px;
 }
-/* line 271, ../sass/screen.scss */
+/* line 287, ../sass/screen.scss */
 .btn-small.nav-btn {
   border-color: #b3a5a2;
+  width: auto;
+  margin-left: 18px;
 }
-/* line 274, ../sass/screen.scss */
+/* line 292, ../sass/screen.scss */
 .btn-small.form-btn {
   margin-top: 0px;
   float: right;
@@ -434,16 +453,16 @@ input.input-xlarge-override.input-xlarge {
   width: 88px;
 }
 
-/* line 292, ../sass/screen.scss */
+/* line 310, ../sass/screen.scss */
 .padded {
   padding: 48px 36px;
 }
-/* line 294, ../sass/screen.scss */
+/* line 312, ../sass/screen.scss */
 .padded > p {
   font: normal normal 12px Helvetica, Arial, "sans-serif";
 }
 
-/* line 300, ../sass/screen.scss */
+/* line 318, ../sass/screen.scss */
 .controls .control-label {
   font: normal normal 12px Helvetica, Arial, "sans-serif";
   float: left;
